tests/baselines/reference/nonPrimitiveAndTypeVariables.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts(10,9): error TS2322: Type 'T' is not assignable to type 'object'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts(11,9): error TS2322: Type 'T' is not assignable to type 'object | U'.
  Type 'T' is not assignable to type 'U'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAndTypeVariables.ts (2 errors) ====
    // Repros from #23800
    
    type A<T, V> = { [P in keyof T]: T[P] extends V ? 1 : 0; };
    type B<T, V> = { [P in keyof T]: T[P] extends V | object ? 1 : 0; };
    
    let a: A<{ a: 0 | 1 }, 0> = { a: 0 };
    let b: B<{ a: 0 | 1 }, 0> = { a: 0 };
    
    function foo<T, U>(x: T) {
        let a: object = x;  // Error
            ~
!!! error TS2322: Type 'T' is not assignable to type 'object'.
        let b: U | object = x;  // Error
            ~
!!! error TS2322: Type 'T' is not assignable to type 'object | U'.
!!! error TS2322:   Type 'T' is not assignable to type 'U'.
    }
    